vlib/v/checker/tests/inout/mod_op_wrong_left_type_err_d.out
vlib/v/checker/tests/inout/mod_op_wrong_left_type_err_d.v:3:2: error: left type of `%` cannot be non-integer type map_string_int
    1| fn main() {
    2|     a := map[string]int
    3|     a % 1
           ^
    4| }
